set(SUBLIB_NAME ezSocket)
set(SUBLIB_SOURCES )

set(SUBLIB_VERSION 1.0.0)
set(SUBLIB_SOVERSION 1)

add_library(${SUBLIB_NAME} SHARED ${SUBLIB_SOURCES})
add_library(${ROOT_PROJECT}::${COMPONENT_NAME}::${SUBLIB_NAME} ALIAS
            ${SUBLIB_NAME})

set_target_properties(
  ${SUBLIB_NAME}
  PROPERTIES VERSION ${SUBLIB_VERSION}
             SOVERSION ${SUBLIB_SOVERSION}
             DEBUG_POSTFIX "d")

target_include_directories(
  ${SUBLIB_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                        $<INSTALL_INTERFACE:include/${ROOT_PROJECT}>)
target_compile_features(${SUBLIB_NAME} PUBLIC cxx_std_17)
target_link_libraries(${SUBLIB_NAME} PUBLIC ezLogger)

install(
  TARGETS ${SUBLIB_NAME}
  EXPORT ${SUBLIB_NAME}-targets
  COMPONENT ${SUBLIB_NAME}
  ARCHIVE DESTINATION lib/${ROOT_PROJECT}
  LIBRARY DESTINATION lib/${ROOT_PROJECT})

install(
  EXPORT ${SUBLIB_NAME}-targets
  FILE "${ROOT_PROJECT}-${COMPONENT_NAME}-${SUBLIB_NAME}-targets.cmake"
  NAMESPACE ${ROOT_PROJECT}::${COMPONENT_NAME}::
  DESTINATION lib/cmake/${ROOT_PROJECT}
  COMPONENT ${SUBLIB_NAME})

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/${SUBLIB_NAME}/
        DESTINATION include/${ROOT_PROJECT}/${COMPONENT_NAME}/${SUBLIB_NAME})
